--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 node_modules
 /.pnp
 .pnp.js
-db.js
+
+
 # testing
 /coverage
 
@@ -22,3 +23,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Ignore specific file
+db.js
